// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationList matches snapshot where there is no notifications 1`] = `
<Fragment>
  <StyledCommandBarBase
    items={
      Array [
        Object {
          "ariaLabel": "modelRepository.commands.back.ariaLabel",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Cancel",
          },
          "key": "back",
          "onClick": [Function],
          "text": "header.notifications.dismiss",
        },
      ]
    }
  />
  <div>
    <div
      className="notification-list-entry"
    >
      header.notifications.panel.noNotifications
    </div>
  </div>
</Fragment>
`;

exports[`notificationList matches snapshot where there is no notifications 2`] = `
<Fragment>
  <StyledCommandBarBase
    items={
      Array [
        Object {
          "ariaLabel": "modelRepository.commands.back.ariaLabel",
          "disabled": false,
          "iconProps": Object {
            "iconName": "Cancel",
          },
          "key": "back",
          "onClick": [Function],
          "text": "header.notifications.dismiss",
        },
      ]
    }
  />
  <div>
    <div
      key="0"
    >
      <NotificationListEntry
        notification={
          Object {
            "text": Object {
              "translationKey": "test",
            },
            "type": 2,
          }
        }
        showAnnoucement={false}
      />
    </div>
  </div>
</Fragment>
`;
